--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
         {
             "label": "echo",
             "type": "shell",
-            "command": "php -S localhost:8000",
+            "command": "php -S localhost:8000",         // Change to different port if you are receiving invalid request
             "group": {
                 "kind": "build",
                 "isDefault": true
