--- a/To-Do-App-Angular/angular.json
+++ b/To-Do-App-Angular/angular.json
@@ -99,7 +99,7 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": ["./node_modules/jquery/dist/jquery.min.js"]
           }
         }
       }
